DMC-E系列控制卡例程/VB.net/例2_连续运动/例2_连续运动/LTDMC.vb


    '限位/异常设置
    ' <summary>
    ' 设置软限位参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7></param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="source_sel">位置源：0-指令位置，1-编码器位置</param>
    ' <param name="SL_action">制动方式：0-减速停止，1-立即停止</param>
    ' <param name="N_limit">负限位值</param>
    ' <param name="P_limit">正限位值</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_softlimit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal source_sel As UInt16, ByVal SL_action As UInt16, ByVal N_limit As Int32, ByVal P_limit As Int32) As Int16  '设置软限位参数
    ' <summary>
    ' 读取软限位参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7></param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="source_sel">位置源：0-指令位置，1-编码器位置</param>
    ' <param name="SL_action">制动方式：0-减速停止，1-立即停止</param>
    ' <param name="N_limit">负限位值</param>
    ' <param name="P_limit">正限位值</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_softlimit Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef source_sel As UInt16, ByRef SL_action As UInt16, ByRef N_limit As Int32, ByRef P_limit As Int32) As Int16    '读取软限位参数
    ' <summary>
    ' 设置硬件限位模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="el_enable">使能：0-禁止，1-允许</param>
    ' <param name="el_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="el_mode">制动方式：0-减速停止，1-立即停止</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_el_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal el_enable As UInt16, ByVal el_logic As UInt16, ByVal el_mode As UInt16) As Int16      '设置EL信号
    ' <summary>
    ' 读取硬件限位模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="el_enable">使能：0-禁止，1-允许</param>
    ' <param name="el_logic">有效电平：0-低电平，1-高电平</param>
    ' <param name="el_mode">制动方式：0-减速停止，1-立即停止</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_el_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef el_enable As UInt16, ByRef el_logic As UInt16, ByRef el_mode As UInt16) As Int16   '读取设置EL信号
    ' <summary>
    ' 设置硬件急停模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="emg_logic">有效电平：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_emg_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal emg_logic As UInt16) As Int16    '设置EMG信号
    ' <summary>
    ' 读取硬件急停模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="emg_logic">有效电平：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_emg_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef emg_logic As UInt16) As Int16        '读取设置EMG信号
    Declare Function dmc_set_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal logic As UInt16, ByVal time As Int32) As Int16
    Declare Function dmc_get_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef logic As UInt16, ByRef time As Int32) As Int16
    Declare Function dmc_set_dstp_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal time As Int32) As Int16
    Declare Function dmc_get_dstp_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef time As Int32) As Int16
    '3800 5800专用 外部减速停止信号及减速停止时间配置
    ' <summary>
    ' 设置外部IO减速停止模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="logic">有效电平：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_io_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal enable As UInt16, ByVal logic As UInt16) As Int16
    ' <summary>
    ' 读取外部IO减速停止模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="enable">使能：0-禁止，1-允许</param>
    ' <param name="logic">有效电平：0-低电平，1-高电平</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_io_dstp_mode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef enable As UInt16, ByRef logic As UInt16) As Int16
    ' <summary>
    ' 设置减速停止时间，针对所有减速停止有效
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="stop_time">停止时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef stop_time As Double) As Int16
    ' <summary>
    ' 读取减速停止时间，针对所有减速停止有效
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="stop_time">停止时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef stop_time As Double) As Int16

    Declare Function dmc_set_vector_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByVal stop_time As Double) As Int16
    Declare Function dmc_get_vector_dec_stop_time Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByRef stop_time As Double) As Int16

    Declare Function dmc_set_dec_stop_dist Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal dist As Int32) As Int16
    Declare Function dmc_get_dec_stop_dist Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef dist As Int32) As Int16
    Declare Function dmc_set_io_dstp_bitno Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal bitno As UInt16, ByVal filter As Double) As Int16
    Declare Function dmc_get_io_dstp_bitno Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef bitno As UInt16, ByRef filter As Double) As Int16

    '速度设置
    ' <summary>
    ' 设置单轴速度参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Min_Vel">起始速度</param>
    ' <param name="Max_Vel">运行速度</param>
    ' <param name="Tacc">加速时间，单位s</param>
    ' <param name="Tdec">减速时间，单位s</param>
    ' <param name="Stop_vel">停止速度</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_profile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Int16 '设定速度曲线参数
    ' <summary>
    ' 读取单轴速度参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="Min_Vel">起始速度</param>
    ' <param name="Max_Vel">运行速度</param>
    ' <param name="Tacc">加速时间，单位s</param>
    ' <param name="Tdec">减速时间，单位s</param>
    ' <param name="Stop_vel">停止速度</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_profile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Int16 '读取速度曲线参数
    Declare Function dmc_set_acc_profile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Int16 '设定速度曲线参数
    Declare Function dmc_get_acc_profile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Int16 '读取速度曲线参数

    ' <summary>
    ' 设置S速度曲线参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="s_mode">s段参数模式：0</param>
    ' <param name="s_para">s段时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_s_profile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal s_mode As UInt16, ByVal s_para As Double) As Int16        '设置平滑速度曲线参数
    ' <summary>
    ' 设置S速度曲线参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="s_mode">s段参数模式：0</param>
    ' <param name="s_para">s段时间，单位s</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_s_profile Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal s_mode As UInt16, ByRef s_para As Double) As Int16    '读取平滑速度曲线参数
    ' <summary>
    ' 设置单段插补速度参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="Crd">坐标系号：0-1</param>
    ' <param name="Min_Vel">起始速度</param>
    ' <param name="Max_Vel">运行速度</param>
    ' <param name="Tacc">加速时间，单位s</param>
    ' <param name="Tdec">减速时间，单位s</param>
    ' <param name="Stop_vel">停止速度</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_vector_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByVal Min_Vel As Double, ByVal Max_Vel As Double, ByVal Tacc As Double, ByVal Tdec As Double, ByVal Stop_vel As Double) As Int16
    ' <summary>
    ' 读取单段插补速度参数
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="Crd">坐标系号：0-1</param>
    ' <param name="Min_Vel">起始速度</param>
    ' <param name="Max_Vel">运行速度</param>
    ' <param name="Tacc">加速时间，单位s</param>
    ' <param name="Tdec">减速时间，单位s</param>
    ' <param name="Stop_vel">停止速度</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_vector_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByRef Min_Vel As Double, ByRef Max_Vel As Double, ByRef Tacc As Double, ByRef Tdec As Double, ByRef Stop_vel As Double) As Int16
    Declare Function dmc_set_vector_s_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByVal s_mode As UInt16, ByVal s_para As Double) As Int16
    Declare Function dmc_get_vector_s_profile_multicoor Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal Crd As UInt16, ByVal s_mode As UInt16, ByRef s_para As Double) As Int16

    '运动模块脉冲模式
    ' <summary>
    ' 设置脉冲模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="outmode">脉冲输出模式：0-5</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_set_pulse_outmode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByVal outmode As UInt16) As Int16    '设定脉冲输出模式
    ' <summary>
    ' 读取脉冲模式
    ' </summary>
    ' <param name="CardNo">卡号：0-7</param>
    ' <param name="axis">轴号：0-7</param>
    ' <param name="outmode">脉冲输出模式：0-5</param>
    ' <returns>错误代码</returns>
    ' <remarks></remarks>
    Declare Function dmc_get_pulse_outmode Lib "LTDMC.dll" (ByVal CardNo As UInt16, ByVal axis As UInt16, ByRef outmode As UInt16) As Int16      '读取脉冲输出模式
